--- a/RestaurantTRPZ.DAL/RestaurantTRPZ.DAL.csproj
+++ b/RestaurantTRPZ.DAL/RestaurantTRPZ.DAL.csproj
@@ -51,6 +51,13 @@
     <Compile Include="Entities\Ingredient.cs" />
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\DishRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IDishRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IOrderRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IRepository.cs" />
+    <Compile Include="Repositories\OrderRepository.cs" />
+    <Compile Include="Repositories\Repository.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
