--- a/RestaurantTRPZ.DAL/RestaurantTRPZ.DAL.csproj
+++ b/RestaurantTRPZ.DAL/RestaurantTRPZ.DAL.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DishRepository.cs" />
+    <Compile Include="Repositories\CookRepository.cs" />
+    <Compile Include="Repositories\Interfaces\ICookRepository.cs" />
     <Compile Include="Repositories\Interfaces\IDishRepository.cs" />
     <Compile Include="Repositories\Interfaces\IOrderRepository.cs" />
     <Compile Include="Repositories\Interfaces\IRepository.cs" />
