Add UnitOfWork pattern and create RestaurantContext(Mock of database)

--- a/RestaurantTRPZ.DAL/RestaurantTRPZ.DAL.csproj
+++ b/RestaurantTRPZ.DAL/RestaurantTRPZ.DAL.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EF\RestaurantContext.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
     <Compile Include="Entities\Cook.cs" />
     <Compile Include="Entities\Dish.cs" />
@@ -57,8 +58,10 @@
     <Compile Include="Repositories\Interfaces\IDishRepository.cs" />
     <Compile Include="Repositories\Interfaces\IOrderRepository.cs" />
     <Compile Include="Repositories\Interfaces\IRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IUnitOfWork.cs" />
     <Compile Include="Repositories\OrderRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="Repositories\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
