--- a/RestaurantTRPZ.PL.CMD/App.config
+++ b/RestaurantTRPZ.PL.CMD/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="RestaurantDBConnection" connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=userstore;Integrated Security=True;"
+		<add name="RestaurantDBConnection" connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=Restaurant;Integrated Security=True;"
 	 providerName="System.Data.SqlClient"/>
 	</connectionStrings>
     <startup> 
