Change entities and services logic need rendering some methods in other class

--- a/RestaurantTRPZ.DAL/RestaurantTRPZ.DAL.csproj
+++ b/RestaurantTRPZ.DAL/RestaurantTRPZ.DAL.csproj
@@ -58,15 +58,16 @@
     <Compile Include="Entities\DishIngredient.cs" />
     <Compile Include="Entities\DishType.cs" />
     <Compile Include="Entities\Equipment.cs" />
-    <Compile Include="Entities\EquipmentType.cs" />
     <Compile Include="Entities\Ingredient.cs" />
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DishRepository.cs" />
     <Compile Include="Repositories\CookRepository.cs" />
+    <Compile Include="Repositories\EquipmentRepository.cs" />
     <Compile Include="Repositories\Interfaces\ICookRepository.cs" />
     <Compile Include="Repositories\Interfaces\IDishRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IEquipmentRepository.cs" />
     <Compile Include="Repositories\Interfaces\IOrderRepository.cs" />
     <Compile Include="Repositories\Interfaces\IRepository.cs" />
     <Compile Include="Repositories\Interfaces\IUnitOfWork.cs" />
