Add AutoMapper to BLL and include in project

--- a/RestaurantTRPZ.BLL/RestaurantTRPZ.BLL.csproj
+++ b/RestaurantTRPZ.BLL/RestaurantTRPZ.BLL.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=10.0.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.10.1.1\lib\net461\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config\AutoMapperConfiguration.cs" />
     <Compile Include="DTO%27s\DishDTO.cs" />
     <Compile Include="DTO%27s\DishTypeDTO.cs" />
     <Compile Include="DTO%27s\IngredientDTO.cs" />
@@ -49,6 +53,7 @@
     <Compile Include="Services\DishService.cs" />
     <Compile Include="Services\Interfaces\IOrderService.cs" />
     <Compile Include="Services\OrderService.cs" />
+    <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RestaurantTRPZ.DAL\RestaurantTRPZ.DAL.csproj">
@@ -58,6 +63,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Services\Interfaces\IDishService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
