--- a/RestaurantTRPZ.DAL/RestaurantTRPZ.DAL.csproj
+++ b/RestaurantTRPZ.DAL/RestaurantTRPZ.DAL.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Entities\Equipment.cs" />
     <Compile Include="Entities\Ingredient.cs" />
     <Compile Include="Entities\Order.cs" />
+    <Compile Include="Migrations\202102241033088_InitMigration.cs" />
+    <Compile Include="Migrations\202102241033088_InitMigration.designer.cs">
+      <DependentUpon>202102241033088_InitMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DishRepository.cs" />
@@ -77,6 +81,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202102241033088_InitMigration.resx">
+      <DependentUpon>202102241033088_InitMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
