--- a/RestarauntTRPZ.DAL.Impl/RestarauntTRPZ.DAL.Impl.csproj
+++ b/RestarauntTRPZ.DAL.Impl/RestarauntTRPZ.DAL.Impl.csproj
@@ -69,6 +69,11 @@
     <Compile Include="DALDependencies.cs" />
     <Compile Include="EF\DbInitializer.cs" />
     <Compile Include="EF\RestaurantContext.cs" />
+    <Compile Include="Migrations\202105141652416_InitialCreate.cs" />
+    <Compile Include="Migrations\202105141652416_InitialCreate.designer.cs">
+      <DependentUpon>202105141652416_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CookRepository.cs" />
     <Compile Include="Repositories\DishRepository.cs" />
@@ -88,8 +93,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202105141652416_InitialCreate.resx">
+      <DependentUpon>202105141652416_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
