--- a/RestaurantTRPZ.BLL.Impl/RestaurantTRPZ.BLL.Impl.csproj
+++ b/RestaurantTRPZ.BLL.Impl/RestaurantTRPZ.BLL.Impl.csproj
@@ -31,9 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=10.0.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.10.1.1\lib\net461\AutoMapper.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.5.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
@@ -60,7 +57,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLLDependencies.cs" />
-    <Compile Include="Mappers\ServiceMappingProfile.cs" />
+    <Compile Include="Mappers\DishMapper.cs" />
+    <Compile Include="Mappers\DishOrderMapper.cs" />
+    <Compile Include="Mappers\DishTypeMapper.cs" />
+    <Compile Include="Mappers\IngredientMapper.cs" />
+    <Compile Include="Mappers\OrderMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CookService.cs" />
     <Compile Include="Services\DishService.cs" />
@@ -78,13 +79,13 @@
       <Project>{2e4df57d-e45f-4db7-8c08-661eb503aa94}</Project>
       <Name>RestaurantTRPZ.BLL.Abstr</Name>
     </ProjectReference>
-    <ProjectReference Include="..\RestaurantTRPZ.DTO\RestaurantTRPZ.DTO.csproj">
-      <Project>{f1d42716-350c-456a-b21d-afa5915cf567}</Project>
-      <Name>RestaurantTRPZ.DTO</Name>
-    </ProjectReference>
     <ProjectReference Include="..\RestaurantTRPZ.Entity\RestaurantTRPZ.Entities.csproj">
       <Project>{af1a4dab-fe48-453b-b9b9-e6b3c7878b00}</Project>
       <Name>RestaurantTRPZ.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RestaurantTRPZ.Models\RestaurantTRPZ.Models.csproj">
+      <Project>{3e1ec5da-fa4f-4112-aa07-f22b234cf18d}</Project>
+      <Name>RestaurantTRPZ.Models</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
