--- a/RestaurantTRPZ.Models/RestaurantTRPZ.Models.csproj
+++ b/RestaurantTRPZ.Models/RestaurantTRPZ.Models.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F1D42716-350C-456A-B21D-AFA5915CF567}</ProjectGuid>
+    <ProjectGuid>{3E1EC5DA-FA4F-4112-AA07-F22B234CF18D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RestaurantTRPZ.DTO</RootNamespace>
-    <AssemblyName>RestaurantTRPZ.DTO</AssemblyName>
+    <RootNamespace>RestaurantTRPZ.Models</RootNamespace>
+    <AssemblyName>RestaurantTRPZ.Models</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,10 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DishDTO.cs" />
-    <Compile Include="DishOrderDTO.cs" />
-    <Compile Include="IngredientDTO.cs" />
-    <Compile Include="OrderDTO.cs" />
+    <Compile Include="DishModel.cs" />
+    <Compile Include="DishOrderModel.cs" />
+    <Compile Include="DishTypeModel.cs" />
+    <Compile Include="IngredientModel.cs" />
+    <Compile Include="OrderModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
